parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> PROGRAM ID SEMICOLON agregarProg prog_1
Rule 2     agregarProg -> <empty>
Rule 3     prog_1 -> var cuadruploMain metodos mainEnd prog_2
Rule 4     prog_1 -> var cuadruploMain metodos
Rule 5     prog_1 -> prog_2
Rule 6     prog_2 -> main
Rule 7     main -> MAIN guardaFuncion LPAREN param2 RPAREN LCURLY var estatutos RCURLY END
Rule 8     cuadruploMain -> <empty>
Rule 9     mainEnd -> <empty>
Rule 10    type -> INT guardaTipoDeVariable
Rule 11    type -> FLOAT guardaTipoDeVariable
Rule 12    type -> CHAR guardaTipoDeVariable
Rule 13    guardaTipoDeVariable -> <empty>
Rule 14    var -> vars
Rule 15    var -> empty
Rule 16    vars -> VAR var_2
Rule 17    var_2 -> var_2 type var1 SEMICOLON agregarVar
Rule 18    var_2 -> empty
Rule 19    var1 -> ID
Rule 20    var1 -> ID COMMA var1 agregarVar
Rule 21    var1 -> ID arr
Rule 22    var1 -> ID arr COMMA var1 agregarVar
Rule 23    var1 -> ID mat COMMA var1 agregarVar
Rule 24    var1 -> ID mat
Rule 25    var1 -> ID mat especial
Rule 26    var1 -> empty
Rule 27    agregarVar -> <empty>
Rule 28    especial -> TRANSPUESTA
Rule 29    especial -> INVERSA
Rule 30    especial -> DETERMINANTE
Rule 31    arr -> LBRACKET CTEI RBRACKET
Rule 32    arr -> LBRACKET exp RBRACKET
Rule 33    mat -> LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
Rule 34    mat -> LBRACKET exp RBRACKET LBRACKET exp RBRACKET
Rule 35    mat -> LBRACKET exp RBRACKET LBRACKET CTEI RBRACKET
Rule 36    mat -> LBRACKET CTEI RBRACKET LBRACKET exp RBRACKET
Rule 37    metodos -> funcion metodos
Rule 38    metodos -> empty
Rule 39    funcion -> FUNCION VOID funcion_1
Rule 40    funcion -> FUNCION INT funcion_2
Rule 41    funcion -> FUNCION CHAR funcion_2
Rule 42    funcion -> FUNCION FLOAT funcion_2
Rule 43    funcion_1 -> ID guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RCURLY endFuncion
Rule 44    funcion_2 -> ID guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RETURN operadorReturn exp cuadruploReturn SEMICOLON RCURLY endFuncion
Rule 45    guardaFuncion -> <empty>
Rule 46    funcionGOTO -> <empty>
Rule 47    endFuncion -> <empty>
Rule 48    operadorReturn -> <empty>
Rule 49    cuadruploReturn -> <empty>
Rule 50    estatutos -> estatutos_2 estatutos
Rule 51    estatutos -> empty
Rule 52    estatutos_2 -> asignacion SEMICOLON
Rule 53    estatutos_2 -> llamada SEMICOLON
Rule 54    estatutos_2 -> lectura SEMICOLON
Rule 55    estatutos_2 -> escritura SEMICOLON
Rule 56    estatutos_2 -> for
Rule 57    estatutos_2 -> if
Rule 58    estatutos_2 -> while
Rule 59    asignacion -> ID guardaVariable_2 EQUALS addOperadorName exp cuadruploAsignacion
Rule 60    asignacion -> ID guardaVariable_2 arr EQUALS addOperadorName exp cuadruploAsignacion
Rule 61    asignacion -> ID guardaVariable_2 mat EQUALS addOperadorName exp cuadruploAsignacion
Rule 62    guardaVariable_2 -> <empty>
Rule 63    addOperadorName -> <empty>
Rule 64    cuadruploAsignacion -> <empty>
Rule 65    param -> ID agregarParametro
Rule 66    param -> ID COMMA param agregarParametro
Rule 67    param -> ID arr
Rule 68    param -> ID arr COMMA param
Rule 69    param -> ID mat COMMA param
Rule 70    param -> ID mat
Rule 71    param -> ID mat especial
Rule 72    param -> empty
Rule 73    agregarParametro -> <empty>
Rule 74    param2 -> param2 type param
Rule 75    param2 -> empty
Rule 76    llamada -> ID llamadaEra LPAREN auxiliarExp cuadruploParametros RPAREN cuadruploGoSub endProcesoLlena
Rule 77    llamadaEra -> <empty>
Rule 78    auxiliarExp -> exp
Rule 79    auxiliarExp -> exp COMMA auxiliarExp
Rule 80    auxiliarExp -> empty
Rule 81    cuadruploParametros -> <empty>
Rule 82    cuadruploGoSub -> <empty>
Rule 83    endProcesoLlena -> <empty>
Rule 84    lectura -> READ operadorRead LPAREN exp cuadruploRead RPAREN
Rule 85    operadorRead -> <empty>
Rule 86    cuadruploRead -> <empty>
Rule 87    escritura -> PRINT LPAREN operadorPrint escritura1 cuadruploPrint RPAREN
Rule 88    escritura1 -> escritura2 COMMA escritura2
Rule 89    escritura1 -> escritura2
Rule 90    escritura2 -> COMILLA CTESTRING COMILLA
Rule 91    escritura2 -> CTEI guardaCTE cuadruploPrint
Rule 92    escritura2 -> CTEF guardaCTE cuadruploPrint
Rule 93    escritura2 -> exp
Rule 94    operadorPrint -> <empty>
Rule 95    cuadruploPrint -> <empty>
Rule 96    guardaCTE -> <empty>
Rule 97    for -> FOR operadorFor LPAREN for1 RPAREN cuadruploFor LCURLY estatutos RCURLY endFor
Rule 98    for1 -> FROM asignacion TO exp
Rule 99    operadorFor -> <empty>
Rule 100   cuadruploFor -> <empty>
Rule 101   endFor -> <empty>
Rule 102   if -> IF LPAREN exp RPAREN cuadruploIf LCURLY estatutos RCURLY else endIf
Rule 103   cuadruploIf -> <empty>
Rule 104   endIf -> <empty>
Rule 105   else -> ELSE cuadruploElse LCURLY estatutos RCURLY
Rule 106   else -> empty
Rule 107   cuadruploElse -> <empty>
Rule 108   while -> WHILE operadorWhile LPAREN exp RPAREN cuadruploWhile LCURLY estatutos RCURLY endWhile
Rule 109   operadorWhile -> <empty>
Rule 110   cuadruploWhile -> <empty>
Rule 111   endWhile -> <empty>
Rule 112   exp -> nexp
Rule 113   exp -> nexp OR addOperadorName nexp cuadruploOr
Rule 114   cuadruploOr -> <empty>
Rule 115   nexp -> compexp
Rule 116   nexp -> compexp AND addOperadorName compexp cuadruploAnd
Rule 117   cuadruploAnd -> <empty>
Rule 118   compexp -> sumexp
Rule 119   compexp -> compexp1 sumexp
Rule 120   compexp1 -> sumexp GT addOperadorName sumexp cuadruploComparacion
Rule 121   compexp1 -> sumexp LT addOperadorName sumexp cuadruploComparacion
Rule 122   compexp1 -> sumexp GTE addOperadorName sumexp cuadruploComparacion
Rule 123   compexp1 -> sumexp LTE addOperadorName sumexp cuadruploComparacion
Rule 124   compexp1 -> sumexp NE addOperadorName sumexp cuadruploComparacion
Rule 125   compexp1 -> sumexp COMPARE addOperadorName sumexp cuadruploComparacion
Rule 126   cuadruploComparacion -> <empty>
Rule 127   sumexp -> mulexp
Rule 128   sumexp -> mulexp PLUS addOperadorName mulexp cuadruploSuma
Rule 129   sumexp -> mulexp MINUS addOperadorName mulexp cuadruploSuma
Rule 130   cuadruploSuma -> <empty>
Rule 131   mulexp -> pexp
Rule 132   mulexp -> pexp MUL addOperadorName pexp cuadruploMultiplicacion
Rule 133   mulexp -> pexp DIV addOperadorName pexp cuadruploMultiplicacion
Rule 134   cuadruploMultiplicacion -> <empty>
Rule 135   pexp -> var1 guardaID
Rule 136   pexp -> CTEI guardaCTE
Rule 137   pexp -> CTEF guardaCTE
Rule 138   pexp -> CTEC guardaCTE
Rule 139   pexp -> CTESTRING guardaCTE
Rule 140   pexp -> llamada
Rule 141   pexp -> LPAREN exp RPAREN
Rule 142   guardaID -> <empty>
Rule 143   empty -> <empty>

Terminals, with rules where they appear

AND                  : 116
CHAR                 : 12 41
COMILLA              : 90 90
COMMA                : 20 22 23 66 68 69 79 88
COMPARE              : 125
CTEC                 : 138
CTEF                 : 92 137
CTEI                 : 31 33 33 35 36 91 136
CTESTRING            : 90 139
DETERMINANTE         : 30
DIV                  : 133
ELSE                 : 105
END                  : 7
EQUALS               : 59 60 61
FLOAT                : 11 42
FOR                  : 97
FROM                 : 98
FUNCION              : 39 40 41 42
GT                   : 120
GTE                  : 122
ID                   : 1 19 20 21 22 23 24 25 43 44 59 60 61 65 66 67 68 69 70 71 76
IF                   : 102
INT                  : 10 40
INVERSA              : 29
LBRACKET             : 31 32 33 33 34 34 35 35 36 36
LCURLY               : 7 43 44 97 102 105 108
LPAREN               : 7 43 44 76 84 87 97 102 108 141
LT                   : 121
LTE                  : 123
MAIN                 : 7
MINUS                : 129
MUL                  : 132
NE                   : 124
OR                   : 113
PLUS                 : 128
PRINT                : 87
PROGRAM              : 1
RBRACKET             : 31 32 33 33 34 34 35 35 36 36
RCURLY               : 7 43 44 97 102 105 108
READ                 : 84
RETURN               : 44
RPAREN               : 7 43 44 76 84 87 97 102 108 141
SEMICOLON            : 1 17 43 44 44 52 53 54 55
TO                   : 98
TRANSPUESTA          : 28
VAR                  : 16
VOID                 : 39
WHILE                : 108
error                : 

Nonterminals, with rules where they appear

addOperadorName      : 59 60 61 113 116 120 121 122 123 124 125 128 129 132 133
agregarParametro     : 65 66
agregarProg          : 1
agregarVar           : 17 20 22 23
arr                  : 21 22 60 67 68
asignacion           : 52 98
auxiliarExp          : 76 79
compexp              : 115 116 116
compexp1             : 119
cuadruploAnd         : 116
cuadruploAsignacion  : 59 60 61
cuadruploComparacion : 120 121 122 123 124 125
cuadruploElse        : 105
cuadruploFor         : 97
cuadruploGoSub       : 76
cuadruploIf          : 102
cuadruploMain        : 3 4
cuadruploMultiplicacion : 132 133
cuadruploOr          : 113
cuadruploParametros  : 76
cuadruploPrint       : 87 91 92
cuadruploRead        : 84
cuadruploReturn      : 44
cuadruploSuma        : 128 129
cuadruploWhile       : 108
else                 : 102
empty                : 15 18 26 38 51 72 75 80 106
endFor               : 97
endFuncion           : 43 44
endIf                : 102
endProcesoLlena      : 76
endWhile             : 108
escritura            : 55
escritura1           : 87
escritura2           : 88 88 89
especial             : 25 71
estatutos            : 7 43 44 50 97 102 105 108
estatutos_2          : 50
exp                  : 32 34 34 35 36 44 59 60 61 78 79 84 93 98 102 108 141
for                  : 56
for1                 : 97
funcion              : 37
funcionGOTO          : 43 44
funcion_1            : 39
funcion_2            : 40 41 42
guardaCTE            : 91 92 136 137 138 139
guardaFuncion        : 7 43 44
guardaID             : 135
guardaTipoDeVariable : 10 11 12
guardaVariable_2     : 59 60 61
if                   : 57
lectura              : 54
llamada              : 53 140
llamadaEra           : 76
main                 : 6
mainEnd              : 3
mat                  : 23 24 25 61 69 70 71
metodos              : 3 4 37
mulexp               : 127 128 128 129 129
nexp                 : 112 113 113
operadorFor          : 97
operadorPrint        : 87
operadorRead         : 84
operadorReturn       : 44
operadorWhile        : 108
param                : 66 68 69 74
param2               : 7 43 44 74
pexp                 : 131 132 132 133 133
prog                 : 0
prog_1               : 1
prog_2               : 3 5
sumexp               : 118 119 120 120 121 121 122 122 123 123 124 124 125 125
type                 : 17 74
var                  : 3 4 7 43 44
var1                 : 17 20 22 23 135
var_2                : 16 17
vars                 : 14
while                : 58

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . PROGRAM ID SEMICOLON agregarProg prog_1

    PROGRAM         shift and go to state 2

    prog                           shift and go to state 1

state 1

    (0) S' -> prog .



state 2

    (1) prog -> PROGRAM . ID SEMICOLON agregarProg prog_1

    ID              shift and go to state 3


state 3

    (1) prog -> PROGRAM ID . SEMICOLON agregarProg prog_1

    SEMICOLON       shift and go to state 4


state 4

    (1) prog -> PROGRAM ID SEMICOLON . agregarProg prog_1
    (2) agregarProg -> .

    VAR             reduce using rule 2 (agregarProg -> .)
    MAIN            reduce using rule 2 (agregarProg -> .)
    FUNCION         reduce using rule 2 (agregarProg -> .)
    $end            reduce using rule 2 (agregarProg -> .)

    agregarProg                    shift and go to state 5

state 5

    (1) prog -> PROGRAM ID SEMICOLON agregarProg . prog_1
    (3) prog_1 -> . var cuadruploMain metodos mainEnd prog_2
    (4) prog_1 -> . var cuadruploMain metodos
    (5) prog_1 -> . prog_2
    (14) var -> . vars
    (15) var -> . empty
    (6) prog_2 -> . main
    (16) vars -> . VAR var_2
    (143) empty -> .
    (7) main -> . MAIN guardaFuncion LPAREN param2 RPAREN LCURLY var estatutos RCURLY END

  ! shift/reduce conflict for MAIN resolved as shift
    VAR             shift and go to state 12
    FUNCION         reduce using rule 143 (empty -> .)
    $end            reduce using rule 143 (empty -> .)
    MAIN            shift and go to state 13

  ! MAIN            [ reduce using rule 143 (empty -> .) ]

    prog_1                         shift and go to state 6
    var                            shift and go to state 7
    prog_2                         shift and go to state 8
    vars                           shift and go to state 9
    empty                          shift and go to state 10
    main                           shift and go to state 11

state 6

    (1) prog -> PROGRAM ID SEMICOLON agregarProg prog_1 .

    $end            reduce using rule 1 (prog -> PROGRAM ID SEMICOLON agregarProg prog_1 .)


state 7

    (3) prog_1 -> var . cuadruploMain metodos mainEnd prog_2
    (4) prog_1 -> var . cuadruploMain metodos
    (8) cuadruploMain -> .

    FUNCION         reduce using rule 8 (cuadruploMain -> .)
    MAIN            reduce using rule 8 (cuadruploMain -> .)
    $end            reduce using rule 8 (cuadruploMain -> .)

    cuadruploMain                  shift and go to state 14

state 8

    (5) prog_1 -> prog_2 .

    $end            reduce using rule 5 (prog_1 -> prog_2 .)


state 9

    (14) var -> vars .

    FUNCION         reduce using rule 14 (var -> vars .)
    MAIN            reduce using rule 14 (var -> vars .)
    $end            reduce using rule 14 (var -> vars .)
    ID              reduce using rule 14 (var -> vars .)
    READ            reduce using rule 14 (var -> vars .)
    PRINT           reduce using rule 14 (var -> vars .)
    FOR             reduce using rule 14 (var -> vars .)
    IF              reduce using rule 14 (var -> vars .)
    WHILE           reduce using rule 14 (var -> vars .)
    RCURLY          reduce using rule 14 (var -> vars .)
    RETURN          reduce using rule 14 (var -> vars .)


state 10

    (15) var -> empty .

    FUNCION         reduce using rule 15 (var -> empty .)
    MAIN            reduce using rule 15 (var -> empty .)
    $end            reduce using rule 15 (var -> empty .)
    ID              reduce using rule 15 (var -> empty .)
    READ            reduce using rule 15 (var -> empty .)
    PRINT           reduce using rule 15 (var -> empty .)
    FOR             reduce using rule 15 (var -> empty .)
    IF              reduce using rule 15 (var -> empty .)
    WHILE           reduce using rule 15 (var -> empty .)
    RCURLY          reduce using rule 15 (var -> empty .)
    RETURN          reduce using rule 15 (var -> empty .)


state 11

    (6) prog_2 -> main .

    $end            reduce using rule 6 (prog_2 -> main .)


state 12

    (16) vars -> VAR . var_2
    (17) var_2 -> . var_2 type var1 SEMICOLON agregarVar
    (18) var_2 -> . empty
    (143) empty -> .

    INT             reduce using rule 143 (empty -> .)
    FLOAT           reduce using rule 143 (empty -> .)
    CHAR            reduce using rule 143 (empty -> .)
    FUNCION         reduce using rule 143 (empty -> .)
    MAIN            reduce using rule 143 (empty -> .)
    $end            reduce using rule 143 (empty -> .)
    ID              reduce using rule 143 (empty -> .)
    READ            reduce using rule 143 (empty -> .)
    PRINT           reduce using rule 143 (empty -> .)
    FOR             reduce using rule 143 (empty -> .)
    IF              reduce using rule 143 (empty -> .)
    WHILE           reduce using rule 143 (empty -> .)
    RCURLY          reduce using rule 143 (empty -> .)
    RETURN          reduce using rule 143 (empty -> .)

    var_2                          shift and go to state 15
    empty                          shift and go to state 16

state 13

    (7) main -> MAIN . guardaFuncion LPAREN param2 RPAREN LCURLY var estatutos RCURLY END
    (45) guardaFuncion -> .

    LPAREN          reduce using rule 45 (guardaFuncion -> .)

    guardaFuncion                  shift and go to state 17

state 14

    (3) prog_1 -> var cuadruploMain . metodos mainEnd prog_2
    (4) prog_1 -> var cuadruploMain . metodos
    (37) metodos -> . funcion metodos
    (38) metodos -> . empty
    (39) funcion -> . FUNCION VOID funcion_1
    (40) funcion -> . FUNCION INT funcion_2
    (41) funcion -> . FUNCION CHAR funcion_2
    (42) funcion -> . FUNCION FLOAT funcion_2
    (143) empty -> .

    FUNCION         shift and go to state 21
    MAIN            reduce using rule 143 (empty -> .)
    $end            reduce using rule 143 (empty -> .)

    metodos                        shift and go to state 18
    funcion                        shift and go to state 19
    empty                          shift and go to state 20

state 15

    (16) vars -> VAR var_2 .
    (17) var_2 -> var_2 . type var1 SEMICOLON agregarVar
    (10) type -> . INT guardaTipoDeVariable
    (11) type -> . FLOAT guardaTipoDeVariable
    (12) type -> . CHAR guardaTipoDeVariable

    FUNCION         reduce using rule 16 (vars -> VAR var_2 .)
    MAIN            reduce using rule 16 (vars -> VAR var_2 .)
    $end            reduce using rule 16 (vars -> VAR var_2 .)
    ID              reduce using rule 16 (vars -> VAR var_2 .)
    READ            reduce using rule 16 (vars -> VAR var_2 .)
    PRINT           reduce using rule 16 (vars -> VAR var_2 .)
    FOR             reduce using rule 16 (vars -> VAR var_2 .)
    IF              reduce using rule 16 (vars -> VAR var_2 .)
    WHILE           reduce using rule 16 (vars -> VAR var_2 .)
    RCURLY          reduce using rule 16 (vars -> VAR var_2 .)
    RETURN          reduce using rule 16 (vars -> VAR var_2 .)
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25

    type                           shift and go to state 22

state 16

    (18) var_2 -> empty .

    INT             reduce using rule 18 (var_2 -> empty .)
    FLOAT           reduce using rule 18 (var_2 -> empty .)
    CHAR            reduce using rule 18 (var_2 -> empty .)
    FUNCION         reduce using rule 18 (var_2 -> empty .)
    MAIN            reduce using rule 18 (var_2 -> empty .)
    $end            reduce using rule 18 (var_2 -> empty .)
    ID              reduce using rule 18 (var_2 -> empty .)
    READ            reduce using rule 18 (var_2 -> empty .)
    PRINT           reduce using rule 18 (var_2 -> empty .)
    FOR             reduce using rule 18 (var_2 -> empty .)
    IF              reduce using rule 18 (var_2 -> empty .)
    WHILE           reduce using rule 18 (var_2 -> empty .)
    RCURLY          reduce using rule 18 (var_2 -> empty .)
    RETURN          reduce using rule 18 (var_2 -> empty .)


state 17

    (7) main -> MAIN guardaFuncion . LPAREN param2 RPAREN LCURLY var estatutos RCURLY END

    LPAREN          shift and go to state 26


state 18

    (3) prog_1 -> var cuadruploMain metodos . mainEnd prog_2
    (4) prog_1 -> var cuadruploMain metodos .
    (9) mainEnd -> .

    $end            reduce using rule 4 (prog_1 -> var cuadruploMain metodos .)
    MAIN            reduce using rule 9 (mainEnd -> .)

    mainEnd                        shift and go to state 27

state 19

    (37) metodos -> funcion . metodos
    (37) metodos -> . funcion metodos
    (38) metodos -> . empty
    (39) funcion -> . FUNCION VOID funcion_1
    (40) funcion -> . FUNCION INT funcion_2
    (41) funcion -> . FUNCION CHAR funcion_2
    (42) funcion -> . FUNCION FLOAT funcion_2
    (143) empty -> .

    FUNCION         shift and go to state 21
    MAIN            reduce using rule 143 (empty -> .)
    $end            reduce using rule 143 (empty -> .)

    funcion                        shift and go to state 19
    metodos                        shift and go to state 28
    empty                          shift and go to state 20

state 20

    (38) metodos -> empty .

    MAIN            reduce using rule 38 (metodos -> empty .)
    $end            reduce using rule 38 (metodos -> empty .)


state 21

    (39) funcion -> FUNCION . VOID funcion_1
    (40) funcion -> FUNCION . INT funcion_2
    (41) funcion -> FUNCION . CHAR funcion_2
    (42) funcion -> FUNCION . FLOAT funcion_2

    VOID            shift and go to state 29
    INT             shift and go to state 30
    CHAR            shift and go to state 31
    FLOAT           shift and go to state 32


state 22

    (17) var_2 -> var_2 type . var1 SEMICOLON agregarVar
    (19) var1 -> . ID
    (20) var1 -> . ID COMMA var1 agregarVar
    (21) var1 -> . ID arr
    (22) var1 -> . ID arr COMMA var1 agregarVar
    (23) var1 -> . ID mat COMMA var1 agregarVar
    (24) var1 -> . ID mat
    (25) var1 -> . ID mat especial
    (26) var1 -> . empty
    (143) empty -> .

    ID              shift and go to state 34
    SEMICOLON       reduce using rule 143 (empty -> .)

    var1                           shift and go to state 33
    empty                          shift and go to state 35

state 23

    (10) type -> INT . guardaTipoDeVariable
    (13) guardaTipoDeVariable -> .

    ID              reduce using rule 13 (guardaTipoDeVariable -> .)
    SEMICOLON       reduce using rule 13 (guardaTipoDeVariable -> .)
    RPAREN          reduce using rule 13 (guardaTipoDeVariable -> .)
    INT             reduce using rule 13 (guardaTipoDeVariable -> .)
    FLOAT           reduce using rule 13 (guardaTipoDeVariable -> .)
    CHAR            reduce using rule 13 (guardaTipoDeVariable -> .)

    guardaTipoDeVariable           shift and go to state 36

state 24

    (11) type -> FLOAT . guardaTipoDeVariable
    (13) guardaTipoDeVariable -> .

    ID              reduce using rule 13 (guardaTipoDeVariable -> .)
    SEMICOLON       reduce using rule 13 (guardaTipoDeVariable -> .)
    RPAREN          reduce using rule 13 (guardaTipoDeVariable -> .)
    INT             reduce using rule 13 (guardaTipoDeVariable -> .)
    FLOAT           reduce using rule 13 (guardaTipoDeVariable -> .)
    CHAR            reduce using rule 13 (guardaTipoDeVariable -> .)

    guardaTipoDeVariable           shift and go to state 37

state 25

    (12) type -> CHAR . guardaTipoDeVariable
    (13) guardaTipoDeVariable -> .

    ID              reduce using rule 13 (guardaTipoDeVariable -> .)
    SEMICOLON       reduce using rule 13 (guardaTipoDeVariable -> .)
    RPAREN          reduce using rule 13 (guardaTipoDeVariable -> .)
    INT             reduce using rule 13 (guardaTipoDeVariable -> .)
    FLOAT           reduce using rule 13 (guardaTipoDeVariable -> .)
    CHAR            reduce using rule 13 (guardaTipoDeVariable -> .)

    guardaTipoDeVariable           shift and go to state 38

state 26

    (7) main -> MAIN guardaFuncion LPAREN . param2 RPAREN LCURLY var estatutos RCURLY END
    (74) param2 -> . param2 type param
    (75) param2 -> . empty
    (143) empty -> .

    RPAREN          reduce using rule 143 (empty -> .)
    INT             reduce using rule 143 (empty -> .)
    FLOAT           reduce using rule 143 (empty -> .)
    CHAR            reduce using rule 143 (empty -> .)

    param2                         shift and go to state 39
    empty                          shift and go to state 40

state 27

    (3) prog_1 -> var cuadruploMain metodos mainEnd . prog_2
    (6) prog_2 -> . main
    (7) main -> . MAIN guardaFuncion LPAREN param2 RPAREN LCURLY var estatutos RCURLY END

    MAIN            shift and go to state 13

    prog_2                         shift and go to state 41
    main                           shift and go to state 11

state 28

    (37) metodos -> funcion metodos .

    MAIN            reduce using rule 37 (metodos -> funcion metodos .)
    $end            reduce using rule 37 (metodos -> funcion metodos .)


state 29

    (39) funcion -> FUNCION VOID . funcion_1
    (43) funcion_1 -> . ID guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RCURLY endFuncion

    ID              shift and go to state 43

    funcion_1                      shift and go to state 42

state 30

    (40) funcion -> FUNCION INT . funcion_2
    (44) funcion_2 -> . ID guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RETURN operadorReturn exp cuadruploReturn SEMICOLON RCURLY endFuncion

    ID              shift and go to state 45

    funcion_2                      shift and go to state 44

state 31

    (41) funcion -> FUNCION CHAR . funcion_2
    (44) funcion_2 -> . ID guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RETURN operadorReturn exp cuadruploReturn SEMICOLON RCURLY endFuncion

    ID              shift and go to state 45

    funcion_2                      shift and go to state 46

state 32

    (42) funcion -> FUNCION FLOAT . funcion_2
    (44) funcion_2 -> . ID guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RETURN operadorReturn exp cuadruploReturn SEMICOLON RCURLY endFuncion

    ID              shift and go to state 45

    funcion_2                      shift and go to state 47

state 33

    (17) var_2 -> var_2 type var1 . SEMICOLON agregarVar

    SEMICOLON       shift and go to state 48


state 34

    (19) var1 -> ID .
    (20) var1 -> ID . COMMA var1 agregarVar
    (21) var1 -> ID . arr
    (22) var1 -> ID . arr COMMA var1 agregarVar
    (23) var1 -> ID . mat COMMA var1 agregarVar
    (24) var1 -> ID . mat
    (25) var1 -> ID . mat especial
    (31) arr -> . LBRACKET CTEI RBRACKET
    (32) arr -> . LBRACKET exp RBRACKET
    (33) mat -> . LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
    (34) mat -> . LBRACKET exp RBRACKET LBRACKET exp RBRACKET
    (35) mat -> . LBRACKET exp RBRACKET LBRACKET CTEI RBRACKET
    (36) mat -> . LBRACKET CTEI RBRACKET LBRACKET exp RBRACKET

  ! shift/reduce conflict for COMMA resolved as shift
    SEMICOLON       reduce using rule 19 (var1 -> ID .)
    MUL             reduce using rule 19 (var1 -> ID .)
    DIV             reduce using rule 19 (var1 -> ID .)
    PLUS            reduce using rule 19 (var1 -> ID .)
    MINUS           reduce using rule 19 (var1 -> ID .)
    GT              reduce using rule 19 (var1 -> ID .)
    LT              reduce using rule 19 (var1 -> ID .)
    GTE             reduce using rule 19 (var1 -> ID .)
    LTE             reduce using rule 19 (var1 -> ID .)
    NE              reduce using rule 19 (var1 -> ID .)
    COMPARE         reduce using rule 19 (var1 -> ID .)
    AND             reduce using rule 19 (var1 -> ID .)
    OR              reduce using rule 19 (var1 -> ID .)
    RBRACKET        reduce using rule 19 (var1 -> ID .)
    RPAREN          reduce using rule 19 (var1 -> ID .)
    TO              reduce using rule 19 (var1 -> ID .)
    CTEI            reduce using rule 19 (var1 -> ID .)
    CTEF            reduce using rule 19 (var1 -> ID .)
    CTEC            reduce using rule 19 (var1 -> ID .)
    CTESTRING       reduce using rule 19 (var1 -> ID .)
    LPAREN          reduce using rule 19 (var1 -> ID .)
    ID              reduce using rule 19 (var1 -> ID .)
    COMMA           shift and go to state 49
    LBRACKET        shift and go to state 52

  ! COMMA           [ reduce using rule 19 (var1 -> ID .) ]

    arr                            shift and go to state 50
    mat                            shift and go to state 51

state 35

    (26) var1 -> empty .

    SEMICOLON       reduce using rule 26 (var1 -> empty .)
    MUL             reduce using rule 26 (var1 -> empty .)
    DIV             reduce using rule 26 (var1 -> empty .)
    PLUS            reduce using rule 26 (var1 -> empty .)
    MINUS           reduce using rule 26 (var1 -> empty .)
    GT              reduce using rule 26 (var1 -> empty .)
    LT              reduce using rule 26 (var1 -> empty .)
    GTE             reduce using rule 26 (var1 -> empty .)
    LTE             reduce using rule 26 (var1 -> empty .)
    NE              reduce using rule 26 (var1 -> empty .)
    COMPARE         reduce using rule 26 (var1 -> empty .)
    AND             reduce using rule 26 (var1 -> empty .)
    OR              reduce using rule 26 (var1 -> empty .)
    RBRACKET        reduce using rule 26 (var1 -> empty .)
    RPAREN          reduce using rule 26 (var1 -> empty .)
    COMMA           reduce using rule 26 (var1 -> empty .)
    TO              reduce using rule 26 (var1 -> empty .)
    CTEI            reduce using rule 26 (var1 -> empty .)
    CTEF            reduce using rule 26 (var1 -> empty .)
    CTEC            reduce using rule 26 (var1 -> empty .)
    CTESTRING       reduce using rule 26 (var1 -> empty .)
    LPAREN          reduce using rule 26 (var1 -> empty .)
    ID              reduce using rule 26 (var1 -> empty .)


state 36

    (10) type -> INT guardaTipoDeVariable .

    ID              reduce using rule 10 (type -> INT guardaTipoDeVariable .)
    SEMICOLON       reduce using rule 10 (type -> INT guardaTipoDeVariable .)
    RPAREN          reduce using rule 10 (type -> INT guardaTipoDeVariable .)
    INT             reduce using rule 10 (type -> INT guardaTipoDeVariable .)
    FLOAT           reduce using rule 10 (type -> INT guardaTipoDeVariable .)
    CHAR            reduce using rule 10 (type -> INT guardaTipoDeVariable .)


state 37

    (11) type -> FLOAT guardaTipoDeVariable .

    ID              reduce using rule 11 (type -> FLOAT guardaTipoDeVariable .)
    SEMICOLON       reduce using rule 11 (type -> FLOAT guardaTipoDeVariable .)
    RPAREN          reduce using rule 11 (type -> FLOAT guardaTipoDeVariable .)
    INT             reduce using rule 11 (type -> FLOAT guardaTipoDeVariable .)
    FLOAT           reduce using rule 11 (type -> FLOAT guardaTipoDeVariable .)
    CHAR            reduce using rule 11 (type -> FLOAT guardaTipoDeVariable .)


state 38

    (12) type -> CHAR guardaTipoDeVariable .

    ID              reduce using rule 12 (type -> CHAR guardaTipoDeVariable .)
    SEMICOLON       reduce using rule 12 (type -> CHAR guardaTipoDeVariable .)
    RPAREN          reduce using rule 12 (type -> CHAR guardaTipoDeVariable .)
    INT             reduce using rule 12 (type -> CHAR guardaTipoDeVariable .)
    FLOAT           reduce using rule 12 (type -> CHAR guardaTipoDeVariable .)
    CHAR            reduce using rule 12 (type -> CHAR guardaTipoDeVariable .)


state 39

    (7) main -> MAIN guardaFuncion LPAREN param2 . RPAREN LCURLY var estatutos RCURLY END
    (74) param2 -> param2 . type param
    (10) type -> . INT guardaTipoDeVariable
    (11) type -> . FLOAT guardaTipoDeVariable
    (12) type -> . CHAR guardaTipoDeVariable

    RPAREN          shift and go to state 53
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25

    type                           shift and go to state 54

state 40

    (75) param2 -> empty .

    RPAREN          reduce using rule 75 (param2 -> empty .)
    INT             reduce using rule 75 (param2 -> empty .)
    FLOAT           reduce using rule 75 (param2 -> empty .)
    CHAR            reduce using rule 75 (param2 -> empty .)


state 41

    (3) prog_1 -> var cuadruploMain metodos mainEnd prog_2 .

    $end            reduce using rule 3 (prog_1 -> var cuadruploMain metodos mainEnd prog_2 .)


state 42

    (39) funcion -> FUNCION VOID funcion_1 .

    FUNCION         reduce using rule 39 (funcion -> FUNCION VOID funcion_1 .)
    MAIN            reduce using rule 39 (funcion -> FUNCION VOID funcion_1 .)
    $end            reduce using rule 39 (funcion -> FUNCION VOID funcion_1 .)


state 43

    (43) funcion_1 -> ID . guardaFuncion LPAREN param2 RPAREN SEMICOLON LCURLY var funcionGOTO estatutos RCURLY endFuncion
    (45) guardaFuncion -> .
